listings/ch05-using-structs-to-structure-related-data/output-only-01-debug/output.txt
$ cargo run
   Compiling struktury v0.1.0 (file:///projects/struktury)
error[E0277]: `Rectangle` doesn't implement `std::fmt::Debug`
  --> src/main.rs:12:31
   |
12 |     println!("rect1 to {:?}", rect1);
   |                               ^^^^^ `Rectangle` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `Rectangle`
   = note: add `#[derive(Debug)]` or manually implement `std::fmt::Debug`
   = note: required by `std::fmt::Debug::fmt`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
error: could not compile `struktury`.

To learn more, run the command again with --verbose.
